Change listings exit button to '[X]', fix z-index, add logout button to main menu

--- a/thrifti/src/pages/listings-page/listings-page.scss
+++ b/thrifti/src/pages/listings-page/listings-page.scss
@@ -8,19 +8,25 @@ page-listingsPage{
     margin-left: 1%;
     display: inline-block;
     vertical-align:top;
+    z-index: -1;
     .itemName {
       font-size: 1.3em;
+    z-index: -1;
     }
     .itemDescription {
       width: 50%;
+    z-index: -1;
     }
   }
   .itemPicture {
     width: 160px;
     height: 110px;
+    z-index: -1;
   }
   .closeButton {
+      position: relative;
     float: right;
     color: #ee4422;
+    z-index: 9999;
   }
 }
